--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,12 +10,16 @@ test-junit-version = "4.13.2"
 androidx-test-ext-junit-version = "1.1.5"
 androidx-espresso-core-version = "3.5.1"
 nav_version = "2.5.3"
-hilt-version = "2.43.2"
+hilt-version = "2.44"
 hiltExt-version = "1.0.0"
 coroutines-version = "1.6.4"
 androidx-lifecycle-compose-version = "2.6.1"
 androidxHiltNavigationCompose-version = "1.0.0"
 apollo-version = "3.8.1"
+gradle-version = "8.0.0"
+kotlin-version = "1.7.20"
+android-gradle-plugin-version = "8.0.0"
+coil = "2.2.0"
 
 [libraries]
 
@@ -48,3 +52,13 @@ androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime" }
 androidx-compose-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
 apollographql-apollo-runtime = { module = "com.apollographql.apollo3:apollo-runtime", version.ref = "apollo-version" }
+coil-kt-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+
+[plugins]
+
+android-application = { id = "com.android.application", version.ref = "android-gradle-plugin-version" }
+android-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-version" }
+dagger-hilt-plugin = { id = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt-version" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt-version" }
+kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin-version" }
+apollographql-apollo3 = { id = "com.apollographql.apollo3", version.ref = "apollo-version" }
