--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeDemo"
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".WebViewActivity"
+        <activity android:name=".ui.presentation.WebViewActivity"
             android:theme="@style/Theme.ComposeDemo"/>
 
     </application>
